# WS_interoperability

./: .gitignore  .gitmodules  COMMANDS.md  README.md  _.gitmodules  verify_rhino.py
examples/01_main/01_shortestpath_plot/: 01_shortestpath_plot.py
examples/01_main/02_dynamicrelaxation_live/: 02_dynamicrelaxation_live.py
examples/01_main/03_smoothingonsurface_rhino/: 03_smoothingonsurface_rhino.py  03b_smoothingonsurface_rhino.py
examples/01_main/06_triangle_blender/: 06_triangle_blender.py
examples/02_pybind/01_basic/: CMakeLists.txt  basic.cpp  example.py
examples/02_pybind/01_basic/ext/: PLACEHOLDER
examples/02_pybind/02_libigl/: CMakeLists.txt
examples/02_pybind/02_libigl/examples/: blender.py  editor.py
examples/02_pybind/02_libigl/src/: CMakeLists.txt  planarization.cpp
examples/02_pybind/03_compas/compas_meshx/: .bumpversion.cfg  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  requirements.txt  setup.py  tasks.py
examples/02_pybind/03_compas/compas_meshx/docs/: .buildinfo  api.html  examples.html  genindex.html  gettingstarted.html  index.html  intro.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
examples/02_pybind/03_compas/compas_meshx/docs/.doctrees/: api.doctree  environment.pickle  examples.doctree  gettingstarted.doctree  index.doctree  intro.doctree  license.doctree
examples/02_pybind/03_compas/compas_meshx/docs/.doctrees/api/: compas_meshx.doctree  compas_meshx.isolines.doctree  compas_meshx.planarization.doctree
examples/02_pybind/03_compas/compas_meshx/docs/api/: compas_meshx.html  compas_meshx.isolines.html  compas_meshx.planarization.html
examples/02_pybind/03_compas/compas_meshx/docsource/: api.rst  conf.py  index.rst
examples/02_pybind/03_compas/compas_meshx/docsource/api/: compas_meshx.isolines.rst  compas_meshx.planarization.rst  compas_meshx.rst
examples/02_pybind/03_compas/compas_meshx/examples/: blender.py  editor.py  rhino.py
examples/02_pybind/03_compas/compas_meshx/modules/: CMakeLists.txt  isolines.cpp
examples/02_pybind/03_compas/compas_meshx/src/compas_meshx/: __init__.py
examples/02_pybind/03_compas/compas_meshx/src/compas_meshx/isolines/: __init__.py
examples/02_pybind/03_compas/compas_meshx/src/compas_meshx/planarization/: __init__.py
